@@ -31,6 +31,8 @@ vm-builder (0.9-0ubuntu3) UNRELEASED; urgency=low
   * Added a check for xen hypervisor when ec2 is selected (LP: #285191)
   * Added checks for presence of bucket, access key and secret key for ec2 
     (LP: #284757)
+  * Older suite need 128 bit inode for grub to recognize os. Thanks to Albert
+    Damen for the pointer (LP: #285093)
 
   [Mathias Gug]
   * Fix --templates option.
